# ac

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
include/: HCNetSDK.h  card.h  connection.h  env.h  face.h  message.h  util.h  ws.h
lib/: Dockerfile
src/: card.cpp  connection.cpp  face.cpp  main.cpp  util.cpp  ws.cpp
